--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -4,10 +4,10 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- {{ branch }}
+- master
 
 pool:
-  {{ pool }}
+  vmImage: 'windows-latest'
 
 variables:
   buildConfiguration: 'Release'
